--- a/Forms/Views/Shared/_Layout.cshtml
+++ b/Forms/Views/Shared/_Layout.cshtml
@@ -10,6 +10,10 @@
     <link href="~/css/reglog.css" rel="stylesheet" />
     <link href="~/css/forms.css" rel="stylesheet" />
     <link href="~/css/users.css" rel="stylesheet" />
+    <link href="~/css/forms/form.css" rel="stylesheet" />
+    <link href="~/css/forms/formReadingMode.css" rel="stylesheet" />
+    <link href="~/css/forms/myForms.css" rel="stylesheet" />
+    <link href="~/css/templates/myTemplates.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
